Tue Nov 19 18:49:32 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_objspace_reachable_objects_from_root): do major marking.

Tue Nov 19 18:45:40 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gc_resurrect): added.
	  rb_fstring() used rb_gc_mark() to avoid freeing used string.
	  However, rb_gc_mark() set mark bit *and* pushes mark_stack.
	  rb_gc_resurrect() does only set mark bit if it is before sweeping.

	* string.c (rb_fstring): use rb_gc_resurrect.

	* internal.h: add decl.

Tue Nov 19 09:47:02 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc:  Update to RDoc master a1195ce.  Changes include:

	  Improved accessibility of the main sidebar navigation.

	  Fixed handling of regexp options in HTML source highlighting.

	* test/rdoc:  ditto.

Tue Nov 19 09:33:52 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 6a3d9f9.  Changes include:

	  Compatibly renamed Gem::DependencyResolver to Gem::Resolver.

	  Added support for git gems in gem.deps.rb and Gemfile.

	  Fixed resolver bugs.

	* test/rubygems: ditto.

	* lib/rubygems/LICENSE.txt:  Updated to license from RubyGems trunk.
	  [ruby-trunk - Bug #9086]

	* lib/rubygems/commands/which_command.rb:  RubyGems now indicates
	  failure when any file is missing.  [ruby-trunk - Bug #9004]

	* lib/rubygems/ext/builder:  Extensions are now installed into the
	  extension install directory and the first directory in the require
	  path from the gem.  This allows backwards compatibility with msgpack
	  and other gems that calculate full require paths.
	  [ruby-trunk - Bug #9106]


Tue Nov 19 07:21:56 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in (LOCALTIME_OVERFLOW_PROBLEM): Define it for cross
	  compiling.
	  [ruby-core:58391] [Bug #9119] Reported by Luis Lavena.
	  Analyzed by Heesob Park.

Tue Nov 19 05:55:05 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/rubygems_hook.rb:  Remove debugging puts committed by
	  accident.
