@@ -1,3 +1,7 @@
+Tue Nov 19 18:52:10 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (heap_is_swept_object): use heap_page::before_sweep flag.
+
 Tue Nov 19 18:49:32 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (rb_objspace_reachable_objects_from_root): do major marking.
